--- a/server/config/.enviro
+++ b/server/config/.enviro
@@ -1,3 +1,4 @@
-ATLAS_URI=mongodb+srv://amwright:supersecret__@cs390-lab1-awright.ktjauuf.mongodb.net/cat?retryWrites=true&w=majority
+# ATLAS_URI=mongodb+srv://jshull:EUxnrmh6ZNdRhr4g@login.qlr8roc.mongodb.net/?retryWrites=true&w=majority&appName=Login
+ATLAS_URI=mongodb+srv://mrmarcuswatson:newpassword@catepillarapp.zhqvho6.mongodb.net/?retryWrites=true&w=majority&appName=CatepillarApp
 GOOGLE_SECRET_KEY=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
 GOOGLE_CLIENT_ID=868741849492-ias2jaeoigl0pls8ji5qlqrmcn2h41c5.apps.googleusercontent.com
