--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.1",
+    "source-map-loader": "^5.0.0",
     "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4"
   },
