--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "mongoose": "^8.3.1",
     "passport": "^0.7.0",
     "passport-facebook-token": "^4.0.0",
+    "sass": "^1.75.0",
     "uuid": "^9.0.1"
   }
 }
